chore: add Error Prone, Checkstyle, JaCoCo and SonarCloud to pom